--- a/package.json
+++ b/package.json
@@ -1,57 +1,63 @@
 {
-  "name": "react-practise",
-  "version": "0.1.0",
-  "private": true,
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "license": "ISC",
-  "author": "",
-  "type": "commonjs",
-  "main": "tailwind.config.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.6",
-    "@mui/material": "^7.3.6",
-    "@mui/styled-engine-sc": "^7.3.6",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.8",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-is": "^18.3.1",
-    "react-router-dom": "^7.6.1",
-    "react-scripts": "5.0.1",
-    "styled-components": "^6.1.19",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "sass": "^1.96.0",
-    "tailwindcss": "^3.4.17"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "react-practise",
+    "version": "0.1.0",
+    "private": true,
+    "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+    "license": "ISC",
+    "author": "",
+    "module": "commonjs",
+    "main": "tailwind.config.js",
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
+        "@mui/icons-material": "^7.3.6",
+        "@mui/material": "^7.3.6",
+        "@mui/styled-engine-sc": "^7.3.6",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^13.5.0",
+        "bootstrap": "^5.3.8",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-router-dom": "^7.6.1",
+        "react-scripts": "5.0.1",
+        "styled-components": "^6.1.19",
+        "web-vitals": "^2.1.4"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.28.5",
+        "@babel/preset-env": "^7.28.5",
+        "@babel/preset-react": "^7.28.5",
+        "babel-loader": "^10.0.0",
+        "css-loader": "^7.1.2",
+        "sass": "^1.96.0",
+        "sass-loader": "^16.0.6",
+        "style-loader": "^4.0.0",
+        "tailwindcss": "^3.4.17"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
