--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
         "sass": "^1.96.0",
         "sass-loader": "^16.0.6",
         "style-loader": "^4.0.0",
-        "tailwindcss": "^3.4.17"
+        "tailwindcss": "^3.4.17",
+        "webpack": "^5.103.0",
+        "webpack-cli": "^6.0.1"
     },
     "eslintConfig": {
         "extends": [
